--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@500;700&display=swap"
         rel="stylesheet">
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_16.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon_48.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon_64.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="/favicon_128.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="/favicon_256.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon_512.png">
     <style>
         body {
             font-family: 'Inter', sans-serif;
