--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Hanuman Earth Movers & Construction Ltd - Leading Earthmoving, Agribusiness, and Infrastructure specialists in Zambia, India, and USA.">
+    <meta name="keywords"
+        content="Earthmoving, Construction, Agribusiness, Zambia, Plant Hire, Infrastructure, Hanuman Earth Movers">
+    <meta property="og:title" content="Hanuman Earth Movers & Construction Ltd">
+    <meta property="og:description"
+        content="Leading Earthmoving, Agribusiness, and Infrastructure specialists in Zambia, India, and USA.">
+    <meta property="og:type" content="website">
     <title>Hanuman Earth Movers & Construction Ltd</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
