fix: resolve Vercel build conflict and add meta tag verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="googled8d5c5a386977162" />
     <meta name="description"
         content="Hanuman Earth Movers & Construction Ltd - Leading Earthmoving, Agribusiness, and Infrastructure specialists in Zambia, India, and USA.">
     <meta name="keywords"
